<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="plugin_default_name">Default</string>
    <string name="application_name">Dui</string>
    <string name="home">Home</string>
    <string name="uid_name" translatable="false">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"></string>
    <string name="custom_workspace_cling_description_1"></string>
    <string name="custom_workspace_cling_title_2"></string>
    <string name="custom_workspace_cling_description_2"></string>
    <string name="shortcut_array_installed"><xliff:g id="count" example="3">%1$d</xliff:g> shortcuts created.</string>
    <string name="shortcut_install_failed">Shortcut \"<xliff:g id="name" example="Xiaoming">%1$s</xliff:g>\" failed to create.</string>
    <string name="shortcut_array_install_failed"><xliff:g id="count" example="3">%1$d</xliff:g> shortcuts failed to create.</string>
    <string name="shortcut_array_duplicate"><xliff:g id="count" example="3">%1$d</xliff:g> shortcuts already exist.</string>
    <string name="folder_name_common">Folder</string>
    <string name="folder_name_media">Media</string>
    <string name="folder_name_social">Social</string>
    <string name="folder_name_game">Game</string>
    <string name="folder_name_tool">Tool</string>
    <string name="workspace_custom_settings_grid">Grid</string>
    <string name="workspace_custom_settings_cycleslide">Infinite scroll</string>
    <string name="workspace_custom_settings_lock">Lock Wallpaper</string>
    <string name="workspace_custom_settings_label">Label</string>
    <string name="workspace_custom_settings_hotseat">Dock bar</string>
    <string name="workspace_custom_settings_indicator">Page indicator</string>
    <string name="workspace_custom_settings_statusbar">Status bar</string>
    <string name="workspace_custom_settings_appicon">Icon Settings</string>
    <string name="menu_system_custom_settings">Appearance Settings</string>
    <string name="workspace_custom_grid_size_4x4">4x4</string>
    <string name="workspace_custom_grid_size_4x5">4x5</string>
    <string name="workspace_custom_grid_size_4x6">4x6</string>
    <string name="workspace_custom_grid_size_5x5">5x5</string>
    <string name="workspace_custom_grid_size_5x6">5x6</string>
    <string name="workspace_custom_grid_size_6x6">6x6</string>
    <string name="workspace_custom_grid_size_custom">Custom</string>
    <string name="menu_change_app_icon">Custom Icon</string>
    <string name="crop_view_local_gallery">Gallery</string>
    <string name="crop_view_take_photo">Take Photo</string>
    <string name="crop_view_save_image">Save</string>
    <string name="crop_view_select_picture">Please select a picture</string>
    <string name="crop_view_app_icon">App custom </string>
    <string name="crop_view_icon_restore">Restore default</string>
    <string name="crop_view_loading" >Loading\.\.\.</string>
    <string name="crop_view_preview" >Preview</string>
    <string name="crop_view_restore_wait" >Restoring\.\.\. Please Wait</string>
    <string name="crop_view_restore_dlg_message" format="true">Are you sure to restore %3d icons ?</string>
    <string name="crop_view_rename_title">Rename icon title</string>
    <string name="crop_view_icon_bg_select_title">Select final effection</string>
    <string name="crop_view_custom_title_label">Custom icon name</string>
    <string name="crop_view_custom_empty_label">No Custom Application</string>
    <string name="crop_view_saving_wait">Saving\.\.\. Please Wait</string>
    <string name="crop_view_zoom_in">Zoom In</string>
    <string name="crop_view_zoom_out">Zoom Out</string>
    <string name="menu_create_new_folder">Create New Folder</string>
    <string name="menu_change_sort_type">Sorting</string>
    <string name="menu_apps_icon_sort_type_title">Title</string>
    <string name="menu_apps_icon_sort_type_installed_asc">Earliest installed</string>
    <string name="menu_apps_icon_sort_type_installed_desc">Lastest installed</string>
    <string name="menu_apps_icon_sort_type_most_used">Most used</string>
    <string name="menu_animate_effect_type">Desktop Effects</string>
    <string name="animate_effect_standard">Standard</string>
    <string name="animate_effect_tablet">Cube</string>
    <string name="animate_effect_cubeout">Square Box</string>
    <string name="animate_effect_flipvertical">FlipVertical</string>
    <string name="animate_effect_fliphorizontal">Roll</string>
    <string name="animate_effect_zoomin">Zoom In</string>
    <string name="animate_effect_rotateup">Rotate Up</string>
    <string name="animate_effect_rotatedown">Rotate Down</string>
    <string name="animate_effect_accordion">Accordion</string>
</resources>