<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/launcher:maxScreenCount="@integer/config_defaultWorkspaceMaxCount"
-->

<com.jzs.dr.mtplauncher.sjar.widget.WorkspaceCustomSettings 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res/com.jzs.dr.mtplauncher"
    android:tag="workspace_custom_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#20000000"
    android:paddingTop="@dimen/workspace_preview_screen_paddingtop"
    >

	<com.jzs.dr.mtplauncher.sjar.widget.WorkspaceCustomSettingsPreviewView
		android:tag="preview" 
		android:layout_width="match_parent"
		android:layout_height="0dip" 
		android:layout_weight="1"
		launcher:previewBackground="@drawable/workspace_preview_bg"
		android:gravity="center" 
		android:paddingTop="30dp"
		android:paddingBottom="30dp"
	 />
    
 
	<LinearLayout 
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/workspace_custom_settings_bg" >
		
	    <TextView android:tag="appearance"
			      android:layout_width="match_parent" 
		  		  android:layout_height="wrap_content"
		  		  android:gravity="center_horizontal"
		  		  android:singleLine="true"
		  		  android:textSize="16sp"
		  		  android:textColor="#FFEEF0F3"
		  		  android:paddingBottom="5dp"
		  		  android:paddingTop="5dp"
		  		  android:text="@string/menu_system_custom_settings"  />
	    <LinearLayout 
	        android:layout_width="match_parent" 
		  	android:layout_height="wrap_content"
		  	android:background="@drawable/workspace_custom_settings_scroll_bg" >
		  	
		    <HorizontalScrollView 
			  	android:scrollbars="none" 
			  	android:layout_width="match_parent" 
			  	android:layout_height="wrap_content" 
			  	>
			  	<FrameLayout 
			  	    android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					
					<LinearLayout android:tag="container_appearance"
					    android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:layout_gravity="center_vertical"
						android:paddingTop="2dp"
						android:paddingBottom="0dp" >
					    
					    <TextView android:tag="appicons"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/ic_workspace_custom_settings_appicon_on"
							android:text="@string/workspace_custom_settings_appicon" />
					    
					    <TextView android:tag="cycleslide"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_cycleslide"
							android:text="@string/workspace_custom_settings_cycleslide" />
					    
					    <TextView android:tag="hotseat"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_hotseat"
							android:text="@string/workspace_custom_settings_hotseat" />
					    
					    <TextView android:tag="indicator"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_pageindicator"
							android:text="@string/workspace_custom_settings_indicator" />
					    
					    <TextView android:tag="label"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_label"
							android:text="@string/workspace_custom_settings_label" />
					    
					    <TextView android:tag="grid"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_grid_size_4x4"
							android:text="@string/workspace_custom_settings_grid" />
					    
					    <TextView android:tag="statusbar"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_statusbar"
							android:text="@string/workspace_custom_settings_statusbar" />
					    
					    <TextView android:tag="lock"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_lock"
							android:text="@string/workspace_custom_settings_lock" />
					</LinearLayout>
					
					<LinearLayout android:tag="container_grid_list"
					    android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:layout_gravity="center_vertical"
						android:paddingTop="2dp"
						android:paddingBottom="0dp"
						android:visibility="gone" >
					    
					    <TextView android:tag="4x4"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_grid_size_4x4"
							android:text="@string/workspace_custom_grid_size_4x4" />
					    
					    <TextView android:tag="4x5"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_grid_size_4x5"
							android:text="@string/workspace_custom_grid_size_4x5" />
					    
					    <TextView android:tag="4x6"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_grid_size_4x6"
							android:text="@string/workspace_custom_grid_size_4x6" />
					    
					    <TextView android:tag="5x5"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_grid_size_5x5"
							android:text="@string/workspace_custom_grid_size_5x5" />
					    
					    <TextView android:tag="5x6"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_grid_size_5x6"
							android:text="@string/workspace_custom_grid_size_5x6" />
					    
					    <TextView android:tag="6x6"
					        style="@style/WorkspaceCustomSettingTextView"
							android:drawableTop="@drawable/workspace_custom_settings_grid_size_6x6"
							android:text="@string/workspace_custom_grid_size_6x6" />

					</LinearLayout>
				</FrameLayout>
			</HorizontalScrollView>
		</LinearLayout>
	</LinearLayout>
    
</com.jzs.dr.mtplauncher.sjar.widget.WorkspaceCustomSettings>

